--- a/styles.css
+++ b/styles.css
@@ -41,8 +41,9 @@ ul {
 }
 
 .line {
-    border-top: 2px solid #BDBDBD;
-    padding-top: 10px;
+    border-top: 1px solid #BDBDBD;
+    padding-top: 15px;
+    margin-top: 15px;
 }
 
 .navbar-default {
@@ -80,6 +81,7 @@ nav {
 
 p {
     font-family: 'Lato', sans-serif;
+    line-height: 175%;
 }
 
 .site-link {
